--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,64 +1,80 @@
 @import url('./reset.css');
-@import url('./typography.css ');
+/* TYPOGRAPHY */
 
-/* 
-- Mobile: 375px
-- Desktop: 1440px
- */
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body{
+  font-size: 15px;
+  margin: 1rem;
+  background: var(--color-bg-h-btn);
+  height: 100vh;
+}
+
+picture,
+figure,
+img {
+  width: 100%;
+  max-width: 100%;
+}
+
 
 :root {
 	--color-p: hsla(0, 0%, 100%, 0.75);
 	--color-bg-h-btn: hsl(0, 0%, 95%);
 }
 
+
 /* CONTAINER */
-.container {
-	vertical-align: middle;
+.flex-center {
 	display: flex;
-	align-items: center;
 	justify-content: center;
-	margin: 20px auto;
+	align-items: center;
+	width: 100%;
+	min-height: 100%;
+	
 }
 
-@media screen and (min-width: 1200px) {
-	.container {
-		max-width: 80vw;
-		height: 80vh;
-		margin: auto auto;
-		box-shadow: 0 0 50px 10px whitesmoke;
-	}
-}
 
 /* PREVIEW-CONTAINER */
-.preview-container {
-	display: grid;
+.previews {
+	display: flex;
+	flex-direction: column;
 	border-radius: 10px;
 	overflow: hidden;
+	margin: 2rem 0;
 }
-
-.preview-container * {
+.previews * {
 	margin: 0;
 }
 
-@media screen and (min-width: 1200px) {
-	.preview-container {
-		grid-template-columns: repeat(3, 1fr);
-		display: flex;
+@media screen and (min-width: 400px) {
+	.previews {
+		flex-direction: row;
 	}
 }
 
 /* PREVIEW */
 .preview {
 	--color-bg: var(--color, var(--color-light));
-	min-height: 500px;
-	max-width: 300px;
+	max-width: 250px;
 	padding: 10px 40px;
 	background: var(--color-bg);
 }
 
 .preview__icon {
 	width: inherit;
-	margin: 30px 0;
+	margin: 20px 0;
 }
 
 .preview__heading {
@@ -67,7 +83,7 @@
 	font-weight: 700;
 	letter-spacing: 0.5;
 	font-size: 30px;
-	margin: 30px 0;
+	margin: 20px 0;
     font-stretch: 100;
 	/* font-family: 'Lexend Deca', sans-serif; */
 }
@@ -78,7 +94,7 @@
 }
 
 .preview__content {
-	padding-bottom: 120px;
+	padding-bottom: 100px;
 }
 
 .preview .btn {
